PL4: removed small detail not needed.

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -88,7 +88,7 @@ DIGIT  ::= 0 | 1 | 2 | 3
                     <input type="text" name="stringec" id="stringec" /><label id="usd">$&nbsp;&nbsp;&nbsp;&nbsp;(Don't worry about the dollar sign, it's here for you already)</label>
                 </form>
                 <p id="inputTipEC">
-                    ⬑ <span>Enter a string of characters here to see if it's valid (keep reading for details).</span>
+                    ⬑ <span>Enter a string of characters here to see if it's valid.</span>
                 </p>
             </div>
 
