PL4: Added details for the Extra Credit grammar.

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -88,9 +88,18 @@ DIGIT  ::= 0 | 1 | 2 | 3
                     <input type="text" name="stringec" id="stringec" /><label id="usd">$&nbsp;&nbsp;&nbsp;&nbsp;(Don't worry about the dollar sign, it's here for you already)</label>
                 </form>
                 <p id="inputTipEC">
-                    ⬑ <span>Enter a string of characters here to see if it's valid.</span>
+                    ⬑ <span>Enter a string of characters here to see if it's valid (keep reading for details).</span>
                 </p>
             </div>
+
+            <p>
+                This extra credit recognizer detects strings for the following BNF grammar:
+            </p>
+
+<pre>
+EXP  ::= (  LIST  )  |  a
+LIST ::= LIST , EXP | EXP
+</pre>
 
         </div><!-- #more -->
     </div><!-- #page -->
