Changed buzztard to buzztrax

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -177,9 +177,9 @@ h1 {
             </div>
 
             <div class="linkSection">
-            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://buzztard.org" target="_blank">http://buzztard.org</a> <span class="arrows">↴</span></div></pre>
+            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://buzztrax.org" target="_blank">http://buzztrax.org</a> <span class="arrows">↴</span></div></pre>
 
-                    <p class="in">Buzztard is an open source application for creating music. I designed the website, and I’m starting to contribute code to the project. I will be contributing some modifications to the user interface soon. Visit <a href="http://soundcloud.com/trusktr/four" target="_blank">http://soundcloud.com/trusktr/four</a> to hear some sound I’ve created with buzztard.</p>
+                    <p class="in">buzztrax is an open source application for creating music. I designed the website, and I’m starting to contribute code to the project. I will be contributing some modifications to the user interface soon. Visit <a href="http://soundcloud.com/trusktr/four" target="_blank">http://soundcloud.com/trusktr/four</a> to hear some sound I’ve created with buzztrax.</p>
             </div>
 
             <div class="linkSection">
