--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -120,7 +120,7 @@ h1 {
     </head>
     <body>
         <a href="../password/">&lt;&lt; Go Back</a>
-        <h1>Joseph O Pea - Info Sheet</h1>
+        <h1>Joseph Orbegoso Pea - Portfolio</h1>
 
         <p><em>The following is a list of some things I've made or am working on. A portfolio of sorts. (This looks best in Chrome or Firefox)</em></p>
         <div class="in">
