Changed colors and updated broken links.

--- a/hello/index.html
+++ b/hello/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Joe Pea - CSc at CSUS</title>
     <meta charset="utf-8" />
-    <script src=" http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src=" https://code.jquery.com/jquery-1.9.1.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css' />
     <meta http-equiv="Expires" content="Tue, 01 Jan 1995 12:12:12 GMT" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -36,31 +36,31 @@
 
                 <div id="face1" class="face_container" data-id="1">
                     <div id="face1_1" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/1.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/1.jpg" />
                     </div>
                     <div id="face1_2" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/2.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/2.jpg" />
                     </div>
                     <div id="face1_3" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/3.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/3.jpg" />
                     </div>
                     <div id="face1_4" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/4.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/4.jpg" />
                     </div>
                     <div id="face1_5" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/5.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/5.jpg" />
                     </div>
                     <div id="face1_6" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/6.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/6.jpg" />
                     </div>
                     <div id="face1_7" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/7.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/7.jpg" />
                     </div>
                     <div id="face1_8" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/8.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/8.jpg" />
                     </div>
                     <div id="face1_9" class="face">
-                        <img class="face_img" src="http://bettaftwr.com/~/img/followMouse_faces/joe_pea/9.jpg" />
+                        <img class="face_img" src="http://50.116.4.56/~/img/followMouse_faces/joe_pea/9.jpg" />
                     </div>
                 </div>
 
