--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,7 +159,7 @@ h1 {
             </div>
 
             <div class="linkSection">
-            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://str8wayent.com" target="_blank">http://str8wayent.com</a> <span class="arrows">↴</span></div></pre>
+            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://str8wayent.net" target="_blank">http://str8wayent.net</a> <span class="arrows">↴</span></div></pre>
 
                     <p class="in">A website I made for Straightway Entertainment. Straightway is a group of Muslim hiphop artists that create music focused on spreading peace, love, and good morals. Personally, I'm not Muslim, but I respect their values and their goal for peace worldwide. Scroll down to the bottom to see my art piece composed of the famous buildings of the world. The site features the ability to listen to music and purchase single tracks and albums as well as facebook integration so visitors can press the "like" button to help spread content on facebook.</pre></p>
             </div>
