--- a/PL3/index.html
+++ b/PL3/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Joe Pea - CSc at CSUS</title>
     <meta charset="utf-8" />
-    <script src=" http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src=" https://code.jquery.com/jquery-1.9.1.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css' />
     <meta http-equiv="Expires" content="Tue, 01 Jan 1995 12:12:12 GMT" />
     <meta http-equiv="Pragma" content="no-cache" />
