--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             window.location = "./password/";
         </script>
         <title>Joe Pea - CSc at CSUS</title>
-        <script src=" http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src=" https://code.jquery.com/jquery-1.9.1.js"></script>
         <meta http-equiv="Expires" content="Tue, 01 Jan 1995 12:12:12 GMT">
         <meta http-equiv="Pragma" content="no-cache">
     </head>
