Modified for use on trusktr.io.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -125,7 +125,7 @@ h1 {
         <p><em>The following is a list of some things I've made or am working on. A portfolio of sorts. (This looks best in Chrome or Firefox)</em></p>
         <div class="in">
             <div class="linkSection">
-            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://ecs.csus.edu/~peaj" target="_blank">http://ecs.csus.edu/~peaj</a> <span style="font-size: 1.5em;">↴</span></div></pre>
+            <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://trusktr.io" target="_blank">http://trusktr.io</a> <span style="font-size: 1.5em;">↴</span></div></pre>
 
                     <p class="in">Here you can see my random password generator as well as information about me. The password generator takes the user's random mouse movement to enhance seeding during random number generation. The generator also makes use of discrete Blum Blum Shub sequences. A Blum Blum Shub sequence is a sequence of numbers that have no apparent pattern. The formula is</p>
 
