--- a/public/pages/calendar/index.html
+++ b/public/pages/calendar/index.html
@@ -170,7 +170,7 @@
         </div>
 
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/calendar');
