--- a/public/pages/flip_diagonal/index.html
+++ b/public/pages/flip_diagonal/index.html
@@ -8,9 +8,6 @@
        -->
         <title><%= title %></title>
         <link rel="stylesheet" href="/stylesheets/screen.css" />
-    </head>
-    <body>
-        <link rel='stylesheet' type='text/css' href="/party/jspm/github/RickMohr/Leaflet@better-inertial-scrolling/dist/leaflet.css" />
         <style>
             /*
              * Items marked with a "js" comment are set dynamically with javascript, and generally
@@ -29,8 +26,12 @@
             }
             body {
                 font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+                /*transform: translateZ(1px);*/ /*antialiasing in firefox*/
+                overflow: hidden;
             }
-
+            * {
+                /*outline: 1px solid transparent;*/ /*antialiasing in firefox*/
+            }
             a {
                 color: #00b7ff;
             }
@@ -40,11 +41,13 @@
                 display: none;
             }
         </style>
+    </head>
+    <body>
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/clobe');
+            System.import('js/flipDiagonal');
         </script>
     </body>
 </html>
