--- a/public/pages/giants/index.html
+++ b/public/pages/giants/index.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/mom2015');
+            System.import('js/giants');
         </script>
     </body>
 </html>
