--- a/public/pages/greg5050/index.html
+++ b/public/pages/greg5050/index.html
@@ -8,20 +8,15 @@
        -->
         <title><%= title %></title>
         <meta charset="utf8" />
-        <link rel="stylesheet" href="/stylesheets/password/main.css" />
-        <!-- TODO?: make a common header file for most pages.  -->
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
-        <div id="generator">
-            <h1 id="password">Move your cursor to generate randomness.</h1>
-            <button id="generate" disabled="disabled">generate password</button>
-        </div>
-
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/password');
+            System.import('js/greg5050');
         </script>
     </body>
 </html>
+
