--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -11,30 +11,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
+
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/scrollViewTest');
+            System.import('js/home');
         </script>
 
-        <style type="text/css" media="all">
-            .fmsCtx {
-                position: absolute;
-                width: 50%;
-                height: 100%;
-                left: 0;
-                overflow: hidden;
-            }
-            #one {
-                top: 0;
-            }
-            #two {
-                margin-left: 20px;
-                top:200px;
-            }
-        </style>
-        <div class="fmsCtx" id="one"></div>
-        <div class="fmsCtx" id="two"></div>
+        <!--<script src='/party/jspm/traceur.src.js'></script>-->
+        <!--<script src='app.js'></script>-->
     </body>
 </html>
