--- a/public/pages/mom2015/index.html
+++ b/public/pages/mom2015/index.html
@@ -12,10 +12,9 @@
     </head>
     <body>
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/greg5050');
+        <script src='/jspm_config.js'></script>
+        <script>
+            System.import('/javascripts/mom2015/main.js');
         </script>
     </body>
 </html>
