--- a/public/pages/password/index.html
+++ b/public/pages/password/index.html
@@ -8,18 +8,20 @@
        -->
         <title><%= title %></title>
         <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="/stylesheets/password/main.css" />
+        <!-- TODO?: make a common header file for most pages.  -->
     </head>
     <body>
-
-        <script src='/party/bower/webglearth/index.js'></script>
+        <div id="generator">
+            <h1 id="password">Move your cursor to generate randomness.</h1>
+            <button id="generate" disabled="disabled">generate password</button>
+        </div>
 
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/webglearth');
+            System.import('js/password');
         </script>
     </body>
 </html>
-
