--- a/public/pages/password_reveal/index.html
+++ b/public/pages/password_reveal/index.html
@@ -7,15 +7,15 @@
        - file, You can obtain one at http://mozilla.org/MPL/2.0/.
        -->
         <title><%= title %></title>
-        <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="/stylesheets/screen.css" />
+        <link rel='stylesheet' type='text/css' href="https://famo.us/lib/famous/famous.css" />
     </head>
     <body>
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/johnnyCrook');
+            System.import('js/passwordReveal');
         </script>
     </body>
 </html>
