--- a/public/pages/webglearth/index.html
+++ b/public/pages/webglearth/index.html
@@ -8,18 +8,18 @@
        -->
         <title><%= title %></title>
         <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
 
+        <script src='/party/bower/webglearth/index.js'></script>
+
         <script src='/party/jspm/system.src.js'></script>
-        <script src='jspm_config.js'></script>
+        <script src='/jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/home');
+            System.import('js/webglearth');
         </script>
-
-        <!--<script src='/party/jspm/traceur.src.js'></script>-->
-        <!--<script src='app.js'></script>-->
     </body>
 </html>
+
