Add everything fto debug.

--- a/public/pages/calendar/index.html
+++ b/public/pages/calendar/index.html
@@ -169,11 +169,6 @@
             </div>
         </div>
 
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/calendar');
-        </script>
+        <script src="/js/calendar.bundle.js"></script>
     </body>
 </html>
