--- a/public/pages/mom2015/index.html
+++ b/public/pages/mom2015/index.html
@@ -11,11 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script>
-            System.import('/javascripts/mom2015/main.js');
-        </script>
+        <script src="/js/mom2015.bundle.js"></script>
     </body>
 </html>
 
