Got experiments working with Webpack.

--- a/public/pages/johnnyCrook/index.html
+++ b/public/pages/johnnyCrook/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
-        <script src="/js/giants.bundle.js"></script>
+        <script src="/js/johnnyCrook.bundle.js"></script>
     </body>
 </html>
 
