--- a/public/pages/passwordReveal/index.html
+++ b/public/pages/passwordReveal/index.html
@@ -7,11 +7,11 @@
        - file, You can obtain one at http://mozilla.org/MPL/2.0/.
        -->
         <title><%= title %></title>
-        <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="/stylesheets/screen.css" />
+        <link rel='stylesheet' type='text/css' href="https://famo.us/lib/famous/famous.css" />
     </head>
     <body>
-        <script src="/js/giants.bundle.js"></script>
+        <script src="/js/passwordReveal.bundle.js"></script>
     </body>
 </html>
 
