--- a/public/pages/calendar/index.html
+++ b/public/pages/calendar/index.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-4">
                         <div class="row">
                             <div class="col-lg-12">
-                                <img src="/images/calendar/stars.png" />
+                                <img class="stars" />
                             </div>
                         </div>
                         <div class="row">
@@ -97,7 +97,7 @@
                     <div class="col-lg-4">
                         <div class="row">
                             <div class="col-lg-12">
-                                <img src="/images/calendar/infinite.png" />
+                                <img class="infinite" />
                             </div>
                         </div>
                         <div class="row">
@@ -121,7 +121,7 @@
                     <div class="col-lg-4">
                         <div class="row">
                             <div class="col-lg-12">
-                                <img src="/images/calendar/tags.png" />
+                                <img class="tags" />
                             </div>
                         </div>
                         <div class="row">
@@ -169,11 +169,6 @@
             </div>
         </div>
 
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/calendar');
-        </script>
+        <script src="/js/calendar.bundle.js"></script>
     </body>
 </html>
