--- a/public/pages/flipDiagonal/index.html
+++ b/public/pages/flipDiagonal/index.html
@@ -8,10 +8,6 @@
        -->
         <title><%= title %></title>
         <link rel="stylesheet" href="/stylesheets/screen.css" />
-    </head>
-    <body>
-        <script src="/js/clobe.bundle.js"></script>
-
         <style>
             /*
              * Items marked with a "js" comment are set dynamically with javascript, and generally
@@ -30,8 +26,12 @@
             }
             body {
                 font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+                /*transform: translateZ(1px);*/ /*antialiasing in firefox*/
+                overflow: hidden;
             }
-
+            * {
+                /*outline: 1px solid transparent;*/ /*antialiasing in firefox*/
+            }
             a {
                 color: #00b7ff;
             }
@@ -41,6 +41,9 @@
                 display: none;
             }
         </style>
+    </head>
+    <body>
+        <script src="/js/flipDiagonal.bundle.js"></script>
     </body>
 </html>
 
