--- a/public/pages/greg5050/index.html
+++ b/public/pages/greg5050/index.html
@@ -11,12 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/greg5050');
-        </script>
+        <script src="/js/greg5050.bundle.js"></script>
     </body>
 </html>
 
