--- a/public/pages/password/index.html
+++ b/public/pages/password/index.html
@@ -17,11 +17,6 @@
             <button id="generate" disabled="disabled">generate password</button>
         </div>
 
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/password');
-        </script>
+        <script src="/js/password.bundle.js"></script>
     </body>
 </html>
