--- a/public/pages/webglearth/index.html
+++ b/public/pages/webglearth/index.html
@@ -14,12 +14,7 @@
 
         <script src='/party/bower/webglearth/index.js'></script>
 
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/webglearth');
-        </script>
+        <script src="/js/webglearth.bundle.js"></script>
     </body>
 </html>
 
