Update password app. Wasn't rendering properly.

--- a/public/pages/password/index.html
+++ b/public/pages/password/index.html
@@ -6,10 +6,16 @@
        - License, v. 2.0. If a copy of the MPL was not distributed with this
        - file, You can obtain one at http://mozilla.org/MPL/2.0/.
        -->
-        <title><%= title %></title>
+        <title></title>
         <meta charset="utf8" />
-        <link rel="stylesheet" href="/stylesheets/password/main.css" />
         <!-- TODO?: make a common header file for most pages.  -->
+
+        <style>
+            body {
+                display: none;
+                background: #222;
+            }
+        </style>
     </head>
     <body>
         <div id="generator">
