--- a/meteor-app/public/pages/home/index.html
+++ b/meteor-app/public/pages/home/index.html
@@ -11,15 +11,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-
-        <script src='/party/jspm/system.src.js'></script>
-        <script src='/jspm_config.js'></script>
-        <script type="module">
-            System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/home');
-        </script>
-
-        <!--<script src='/party/jspm/traceur.src.js'></script>-->
-        <!--<script src='app.js'></script>-->
+        <script src="/js/home.bundle.js"></script>
     </body>
 </html>
