Swapping 3D components with React works! :D ;]

--- a/meteor-app/client/main.html
+++ b/meteor-app/client/main.html
@@ -5,9 +5,6 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="react-app-root">
     </div>
-    <!--
-    <div id="rootContainer"></div>
-    -->
 </body>
