Update old about-me page with new info.

--- a/public/hello/index.html
+++ b/public/hello/index.html
@@ -18,7 +18,9 @@
 
     <div id="page">
         <div id="back" class="lighterText" style="font-size: 0.3em; margin-bottom: 10px;">
-            <span><a href="../password/" class="nohighlight" style="color: white; background: none;">&lt;&lt; Go Back</a></span>
+            <span>
+                <!--<a href="../password/" class="nohighlight" style="color: white; background: none;">&lt;&lt; Go Back</a>-->
+            </span>
         </div>
         <div id="hello" class="lighterText rotater introOnly">
             <span>hello.</span>
@@ -72,7 +74,7 @@
 
         </div>
         <div id="email" class="lighterText rotater">
-            <span>josephpea@csus.edu</span>
+            <span>joe@trusktr.io</span>
         </div>
         <div id="skating" class="lighterText rotater">
             <span>i </span><span id="heart">♥</span><span> skateboarding.</span>
@@ -84,6 +86,9 @@
             <span>goal: make the world even better.</span>
         </div>
         <div id="more" class="lighterText">
+            <p>
+                (EDIT: I wrote this sometime in 2013. It's fun to reflect on it now.)
+            </p>
             <p>
                 <span>
                     My favorite language is <a target="_blank" href="http://wikipedia.org/wiki/JavaScript">JavaScript</a>. It's extremely fun for writing <a target="_blank" href="http://mrdoob.com" target="_blank">animations</a>, but it's also
