--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Joseph Pea - Info Sheet</title>
-        <script type="text/javascript" src="../password/jquery-1.8.3.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
 <!--[if gt IE 7]>
 <style>
     .preLink > .noroll.roll {
