--- a/meteor-app/client/main.html
+++ b/meteor-app/client/main.html
@@ -5,7 +5,7 @@
 
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <script src="https://unpkg.com/promise-polyfill@7.0.0/dist/polyfill.min.js"></script>
-    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@1.0.22/webcomponents-sd-ce.js"></script>
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@1.0.22/webcomponents-loader.js"></script>
 </head>
 
 <body>
